Added the Countdown Timer logic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <header class="page-header">
             <h1 class="view-HighScores">View High Score</h1>
-            <h1 class="time-Counter">Time: </h1>
+            <h1 id="time-Counter"></h1>
         </header>
         <section class="game-container">
             <section class= "quiz-home-page">
@@ -25,10 +25,10 @@
                 <button id= "start-quiz-button">Start Quiz</button>
             </section>
             <section class="quiz-questions">
-                <div id= "question-1"></div>
-                <div id= "question-2"></div>
-                <div id= "question-3"></div>
-                <div id= "question-4"></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </section>
             <section class="quiz-results">
 
