Added the ul for the answer choices

--- a/index.html
+++ b/index.html
@@ -24,11 +24,27 @@
                 </p>
                 <button id= "start-quiz-button">Start Quiz</button>
             </section>
-            <section class="quiz-questions">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <section class="quiz-content">   
+                    <h2 class="quiz-question"></h2>
+                    <ul>
+                        <li>
+                            <input type="radio" name="answer" id="a" class="answer">
+                            <label for="a" id="a-answer-text"></label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="b" class="answer">
+                            <label for="b" id="b-answer-text"></label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="c" class="answer">
+                            <label for="c" id="c-answer-text"></label>
+                        </li>
+                        <li>
+                            <input type="radio" name="answer" id="d" class="answer">
+                            <label for="c" id="c-answer-text"></label>
+                        </li>
+                    </ul> 
+                <div class="score"></div>
             </section>
             <section class="quiz-results">
 
