--- a/index.html
+++ b/index.html
@@ -20,36 +20,39 @@
             <section class= "quiz-home-page">
                 <h1 id="game-title">Coding Quiz Challenge</h1>
                 <p id="game-instructions">
-                    Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time bby ten seconds!
+                    Try to answer the following code-related questions within the time limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds!
                 </p>
                 <button id= "start-quiz-button">Start Quiz</button>
             </section>
-            <section class="quiz-content">   
-                    <h2 class="quiz-question"></h2>
+            <section id="quiz"> 
+                <div class="quiz-content"> 
+                <h2 id="quiz-question">What quiz question will go here?</h2>
                     <ul>
                         <li>
                             <input type="radio" name="answer" id="a" class="answer">
-                            <label for="a" id="a-answer-text"></label>
+                            <label for="a" id="a_answerText">Answer Choice 1</label>
                         </li>
                         <li>
                             <input type="radio" name="answer" id="b" class="answer">
-                            <label for="b" id="b-answer-text"></label>
+                            <label for="b" id="b_answerText">Answer Choice 2</label>
                         </li>
                         <li>
                             <input type="radio" name="answer" id="c" class="answer">
-                            <label for="c" id="c-answer-text"></label>
+                            <label for="c" id="c_answerText">Answer Choice 3</label>
                         </li>
                         <li>
                             <input type="radio" name="answer" id="d" class="answer">
-                            <label for="c" id="c-answer-text"></label>
+                            <label for="c" id="d_answerText">Answer Choice 4</label>
                         </li>
                     </ul> 
+                <button id= "submit-quiz-button">Submit</button>
+            </div> 
                 <div class="score"></div>
             </section>
-            <section class="quiz-results">
+            <section id="quiz-results">
 
             </section>
-            <section class="score-history">
+            <section id="score-history">
 
             </section>
 
