Adding working radio buttons

--- a/index.html
+++ b/index.html
@@ -27,24 +27,25 @@
             <section id="quiz"> 
                 <div class="quiz-content"> 
                 <h2 id="quiz-question">What quiz question will go here?</h2>
-                    <ol>
+                    <ol id="codingAnswers">
                         <li>
-                            <input type="radio" name="answer" id="a" class="answer">
+                            <input type="radio" name="answers" id="a" class="answer">
                             <label for="a" id="a_answerText">Answer Choice 1</label>
                         </li>
                         <li>
-                            <input type="radio" name="answer" id="b" class="answer">
+                            <input type="radio" name="answers" id="b" class="answer">
                             <label for="b" id="b_answerText">Answer Choice 2</label>
                         </li>
                         <li>
-                            <input type="radio" name="answer" id="c" class="answer">
+                            <input type="radio" name="answers" id="c" class="answer">
                             <label for="c" id="c_answerText">Answer Choice 3</label>
                         </li>
                         <li>
-                            <input type="radio" name="answer" id="d" class="answer">
+                            <input type="radio" name="answers" id="d" class="answer">
                             <label for="c" id="d_answerText">Answer Choice 4</label>
                         </li>
                     </ol> 
+                    <p id = "answer-response"></p>
                 <button id= "submit-quiz-button">Submit</button>
                 </div>   
             </section>
