--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <h2 id="quiz-question">What quiz question will go here?</h2>
                     <ol id="codingAnswers">
                         <li>
-                            <input type="radio" name="answers" id="a" class="answer">
+                            <input type="radio" name="answers" id="a" class="answer" value="A">
                             <label for="a" id="a_answerText">Answer Choice 1</label>
                         </li>
                         <li>
-                            <input type="radio" name="answers" id="b" class="answer">
+                            <input type="radio" name="answers" id="b" class="answer" value="B">
                             <label for="b" id="b_answerText">Answer Choice 2</label>
                         </li>
                         <li>
-                            <input type="radio" name="answers" id="c" class="answer">
+                            <input type="radio" name="answers" id="c" class="answer" value="C">
                             <label for="c" id="c_answerText">Answer Choice 3</label>
                         </li>
                         <li>
-                            <input type="radio" name="answers" id="d" class="answer">
+                            <input type="radio" name="answers" id="d" class="answer" value="D">
                             <label for="c" id="d_answerText">Answer Choice 4</label>
                         </li>
                     </ol> 
